--- a/Rapport2/introduction.tex
+++ b/Rapport2/introduction.tex
@@ -1,1 +1,1 @@
-In this report we will discuss how we implemented and benchmarked the external heap and the different underlying streams. Different parameters and algorithm variations will be examined in order to optimize the running time of heap sorting. In the end, comparisons with other sorting algorithms are made.
+In this report we will discuss how we implemented and benchmarked the external heap and the different underlying streams. Different parameters and algorithm variations will be examined in order to optimize the running time of heap sorting. In the end, comparisons with other sorting algorithms will be made.
