--- a/Rapport2/test_setup.tex
+++ b/Rapport2/test_setup.tex
@@ -21,7 +21,7 @@ Linux 12.04. The hard drive was an USB2 attached Fujitsu MJA2250BH which had the
 The file system had a block size of 4096 B and 128 kB read ahead.
 
 All implementations have been
-written in C++11 and compiled on Linux using the GCC 4.7 compiler. When measurements were performed, the
+written in C++11 and compiled on Linux using the GCC 4.7 compiler. The
 code was compiled using the \texttt{-O3 -flto -funroll-loops}
 optimization flags.
 
