--- a/Rapport2/rapport.tex
+++ b/Rapport2/rapport.tex
@@ -61,7 +61,7 @@ The following is a description of the different folders available at
 \end{description}
 
 \subsubsection{Code structure}
-The code has the following source files:
+The code is comprised by the following source files:
 \begin{description}
 \item[CMakeLists.txt] CMake file for the project specifying
   compilation options.
@@ -70,7 +70,7 @@ The code has the following source files:
 
 \item[test.cpp] Driver code for calling test code.
 
-\item[external\_heap.hpp] Our external heap interface that provides \texttt{insert}, \texttt{extract\_max}, etc.
+\item[external\_heap.hpp] Our external heap that provides \texttt{insert}, \texttt{extract\_max}, etc.
 
 \item[block.hpp] \texttt{Block} class that represents a node and contains methods for operating streams.
 
