--- a/Rapport3/rapport.tex
+++ b/Rapport3/rapport.tex
@@ -18,7 +18,7 @@
 
 \begin{document}
 
-\title{I/O-algorithms\\Projekt 3}
+\title{I/O-algorithms\\Project 3}
 
 \author{Lasse Espeholt - 20093223\\
 Kasper Nielsen - 20091182\\}
@@ -28,6 +28,7 @@ Kasper Nielsen - 20091182\\}
 \pagebreak{}\tableofcontents{}\pagebreak{}
 
 \section{Sorting}
+
 ...
 
 \section{Searching}
