--- a/Rapport3/rapport.tex
+++ b/Rapport3/rapport.tex
@@ -124,7 +124,7 @@ The insertion / deletion process is almost the same as for the external interval
 \pagebreak
 \section{Distribution sweeping}
 
-...
+\input{3.tex}
 
 %\bibliographystyle{plain}
 %\addcontentsline{toc}{section}{\refname}\bibliography{ref}
